--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "caniuse-lite": "^1.0.30001279",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-player": "^2.9.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
